--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ description = "Programmatic edits to zitaotech BB keyboard models"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "numpy>=1.26.0",
+    "trimesh>=4.0.0",
+    "matplotlib>=3.8.0",
+    "pillow>=10.0.0",
+    "click>=8.1.0",
+    "scipy>=1.11.0",
+    "networkx>=3.0",
 ]
 
 [project.scripts]
